--- a/src/taskpane/taskpane.css
+++ b/src/taskpane/taskpane.css
@@ -3,7 +3,7 @@
  * See LICENSE in the project root for license information.
  */
 
- html,
+ /* html,
  body {
      width: 100%;
      height: 100%;
@@ -81,7 +81,7 @@ b {
 
 h1 {
     text-align: center;
-}
+} */
 
 
 
@@ -98,10 +98,11 @@ body, html {
 }
 
 #container {
+    position: absolute;
     display:flex;
     flex-direction:column;
-    width:100vw;
-    height:100vh;
+    width:100%;
+    height:100%;
 }
 
 #icon {
@@ -119,16 +120,135 @@ body, html {
     width:100%;
 }
 
+#header {
+    display:flex;
+    flex-direction:column;
+    align-items: center;
+    justify-content: center;
+    background-color:#F4F4F4;
+    min-height:175px;
+    width:100%;
+}
+
 .custom-header {
     margin:0px;
-    margin-top:10px;
+    /* margin-top:10px; */
     font-weight: 900;
     font-size: 25pt;
     color: #022A42;
+
+}
+
+#form {
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
+    background-color: white;
+    min-height:175px;
+    width:100%;}
+
+main {
+    position: absolute;
+    display: flex;
+    align-content: space-evenly;
+    /* top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); */
+}
+
+.single-main {
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+}
+
+.input-group {
+    position: relative;
+    width: 90%;
+    margin-bottom: 20px;
+}
+
+.single {
+    width: 90%;
+}
+
+.input-group .input-area {
+    border: 1px solid #dadce0;
+    padding: 12px 13px;
+    font-size: 16px;
+    font-weight: 400;
+    border-radius: 5px;
+    color: #515151;
+}
+
+.input-group .input-area:focus {
+    border: 2px solid royalblue;
+    outline: none;
+}
+
+.input-group .input-area:valid {
+    border: 1px solid #515151;
+}
+
+.input-group .input-area:focus + .label {
+    top: -8px;
+    padding: 0 3px;
+    font-size: 14px;
+    color: royalblue;
+    font-weight: 500;
+}
+
+.input-group .label {
+    color: #8d8d8d;
+    position: absolute;
+    font-weight: 400;
+    top: 14px;
+    left: 13px;
+    background: #ffffff;
+    transition: .1s;
+}
+
+.input-group .input-area:valid + .label {
+    top: -8px;
+    padding: 0 3px;
+    font-size: 14px;
+    color: #515151;
+    font-weight: 500;
+}
+
+.input-group .input-area:hover + .label {
+    color: #67ACE6;
+}
+
+.input-group .input-area:focus:hover + .label {
+    color: royalblue;
+}
+
+.input-group .input-area:hover {
+    border-color: #67ACE6;
+    color: #67ACE6;
+}
+
+.input-group .input-area:focus:hover {
+    border-color: royalblue;
+    color: royalblue;
+}
+
+/* border-color: #8ba479 */
+
+
+
+#warning {
+    display:none;
+    color:crimson;
+    font-size:smaller;
+    margin-top:4px;
 }
 
 
-.custom-dropdown {
+
+
+/* .custom-dropdown {
     display:flex;
 
 }
@@ -148,16 +268,33 @@ body, html {
     flex-direction:column;
     margin: auto;
     background-color:white;
-    flex-grow:1;
-    width:100%;
-    overflow: auto;
+    flex-grow:1; */
+    /* width:100%; */
+    /* overflow: auto; */
     /* justify-content: auto; */
-    justify-content: space-between;
+    /* justify-content: space-between;
     align-items: flex-start;
-    
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .form-item {
+    position: relative;
+}
+
+.form-item .input-area {
+    border: 1px solid #dadce0;
+    padding: 16px 13px;
+    font-size: 16px;
+    border-radius: 5px;
+} */
+
+
+
+/* .form-item {
     align-self: center;
     justify-items: center;
     text-align: center;
@@ -165,9 +302,45 @@ body, html {
     padding: 10px 0px;
     font-weight: 500;
     width: 85%;
+} */
+
+/* 
+.form-item .input-area:valid + .label {
+    top: -8px;
+    padding: 0 3px;
+    font-size: 14px;
+    color: #8d8d8d;
 }
 
-label {
+.form-item .input-area:focus {
+    border: 2px solid royalblue;
+}
+
+.form-item .input-area:focus + .label {
+    top: -8px;
+    padding: 0 3px;
+    font-size: 14px;
+    color: royalblue;
+}
+
+.form-item .label {
+    color: #8d8d8d;
+    position: absolute;
+    top: 20px;
+    left: 13px;
+    background: #ffffff;
+    transition: .1s;
+}
+
+#warning {
+    display:none;
+    color:crimson;
+    font-size:smaller;
+    margin-top:4px;
+} */
+
+
+/* label {
     color: #515151;
 }
 
@@ -196,23 +369,23 @@ span.astrick {
     column-count: 2;
     align-self: center;
     column-gap: 35px;
-    margin: 20px 0px;
+    margin: 20px 0px; */
     /* padding: 10px 0px; */
-    font-weight: 500;
+    /* font-weight: 500;
     width: 85%;
 }
 
 .split-left {
     text-align: center;
-    width: 100%;
+    width: 100%; */
     /* float: left; */
-}
+/* }
 
 .split-right {
     text-align: center;
-    width: 100%;
+    width: 100%; */
     /* float: right; */
-}
+/* }
 
 .text-box {
         height: 29px;
@@ -261,7 +434,7 @@ select {
     background-color: #f4f4f444;
     border-color: #C8C8C8;
     /* border-width: 1.5px; */
-    border-style: groove;
+    /* border-style: groove;
     width: 100%;
 }
 
@@ -280,7 +453,7 @@ list {
     -webkit-appearance: none;
     -moz-appearance: none;
 }
-
+ */
 
 
 
