--- a/src/taskpane/taskpane.css
+++ b/src/taskpane/taskpane.css
@@ -106,27 +106,19 @@ body, html {
 }
 
 #icon {
-    font-size: 32pt;
+    font-size: 22pt;
     color: #67ACE6;
 }
 
 #header {
     display:flex;
-    flex-direction:column;
+    flex-direction: row;
+    column-count: 2;
+    column-gap: 12px;
     align-items: center;
     justify-content: center;
     background-color:#F4F4F4;
-    min-height:175px;
-    width:100%;
-}
-
-#header {
-    display:flex;
-    flex-direction:column;
-    align-items: center;
-    justify-content: center;
-    background-color:#F4F4F4;
-    min-height:175px;
+    min-height:85px;
     width:100%;
 }
 
@@ -134,9 +126,13 @@ body, html {
     margin:0px;
     /* margin-top:10px; */
     font-weight: 900;
-    font-size: 25pt;
+    font-size: 18pt;
     color: #022A42;
 
+}
+
+.grey-back {
+    background-color:#F4F4F4;
 }
 
 #form {
@@ -179,6 +175,7 @@ body, html {
 
 .dos {
     flex-direction: row;
+    justify-content: center;
 
 }
 
@@ -199,8 +196,10 @@ body, html {
 
 .mini {
     width: 85%;
+    column-count: 2;
+    column-gap: 15px;
+    align-self: center;
     position: relative;
-    margin-bottom: 20px;
     box-sizing: border-box;
     display: flex;
     align-items: center;
@@ -551,27 +550,26 @@ list {
 
 #buttons {
     text-align: center;
-    background-color:#F4F4F4;
     min-height:120px;
-    width:100%;
+    width: 85%;
 }
 
 .submit-button {
     display:flex;
     align-items: center;
     justify-content: center;
-    height:100%
+    height: 100%;
 }
 
 .submit {
-    size: 100px;
     background-color: #022A42;
-    width: 125px;
-    border-radius: 50px;
+    width: 100%;
+    border-radius: 15px;
+    border: solid;
     color: #F4F4F4;
     font-family: "HelveticaNeue-Thin", "Helvetica Neue Thin", "Helvetica Neue";
-    font-size: 16pt;
+    font-size: 12pt;
     font-weight: 100;
-    padding: 15px;
+    padding: 10px;
 }
  
